--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
       <section class="portfolio section">
         <div class="container">
           <h1 class="section__title section__title--visually-hidden">Портфолио</h1>
-          <ul class="filter list">
+          <ul class="filter portfolio__filter list">
             <li class="filter__item">
               <button type="button" class="filter__btn filter-btn--current">Все</button>
             </li>
