--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/main.min.css"/>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -83,7 +84,7 @@
       <!--Feature section-->
       <section class="feature section">
         <div class="container">
-          <h2 class="section__title section__title--visually-hidden">Особенности</h2>
+          <h2 class="section__title visually-hidden">Особенности</h2>
           <ul class="feature__list list card-set">
             <li class="feature__item card-item">
               <div class="feature__wrapper-icon">
@@ -716,11 +717,7 @@
           </div>
 
           <label class="modal-checkbox">
-            <input
-              type="checkbox"
-              name="policy"
-              class="modal-checkbox__input modal-checkbox__input--visually-hidden"
-            />
+            <input type="checkbox" name="policy" class="modal-checkbox__input visually-hidden" />
             <span class="modal-checkbox__icon"></span>
             <span class="modal-checkbox__text">
               Соглашаюсь с рассылкой и принимаю
@@ -731,7 +728,7 @@
           <!-- Checkbox як у Ярославa-->
           <!-- <label class="agreement-checkbox">
             <input
-              class="agreement-checkbox__input agreement-checkbox__input--visually-hidden"
+              class="agreement-checkbox__input visually-hidden"
               type="checkbox"
               name="agreement"
             />
