--- a/index.html
+++ b/index.html
@@ -18,37 +18,36 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.min.css"/>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
     <!--Header section-->
     <header class="header">
       <div class="container header__container">
-        <a href="" class="logo header__logo link"
+        <a href="" class="logo header__logo"
           ><span class="logo__excerpt logo__excerpt--blue">Web</span>Studio</a
         >
         <nav class="nav">
-          <ul class="nav__list list">
+          <ul class="nav__list">
             <li class="nav__item">
-              <a href="./index.html" class="nav__link nav__link--active nav__link--current link"
+              <a href="./index.html" class="nav__link nav__link--active nav__link--current"
                 >Студия</a
               >
             </li>
             <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link link nav__link--active">Портфолио</a>
+              <a href="./portfolio.html" class="nav__link nav__link--active">Портфолио</a>
             </li>
             <li class="nav__item">
-              <a href="#contacts" class="nav__link link nav__link--active">Контакты</a>
+              <a href="#contacts" class="nav__link nav__link--active">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header__contact-list list">
+        <ul class="header__contact-list">
           <li class="header__contact-item">
             <a
               href="mailto:info@devstudio.com"
-              class="header__contact-link header__contact-link--active link"
+              class="header__contact-link header__contact-link--active"
             >
               <svg width="16" height="12" class="header__contact-icon">
                 <use href="./images/icons/icon.svg#envelope"></use>
@@ -57,10 +56,7 @@
             </a>
           </li>
           <li class="header__contact-item">
-            <a
-              href="tel:+380961111111"
-              class="header__contact-link header__contact-link--active link"
-            >
+            <a href="tel:+380961111111" class="header__contact-link header__contact-link--active">
               <svg width="10" height="16" class="header__contact-icon">
                 <use href="./images/icons/icon.svg#smartphone"></use>
               </svg>
@@ -85,7 +81,7 @@
       <section class="feature section">
         <div class="container">
           <h2 class="section__title visually-hidden">Особенности</h2>
-          <ul class="feature__list list card-set">
+          <ul class="feature__list card-set">
             <li class="feature__item card-item">
               <div class="feature__wrapper-icon">
                 <svg width="70" height="70" class="feature__icon">
@@ -138,7 +134,7 @@
       <section class="service section">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
-          <ul class="service__list list card-set">
+          <ul class="service__list card-set">
             <li class="service__item card-item">
               <img
                 src="./images/work/img_1.jpg"
@@ -184,7 +180,7 @@
       <section class="team section">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
-          <ul class="team__list list card-set">
+          <ul class="team__list card-set">
             <li class="team__item card-item">
               <img
                 src="./images/team/img-1.jpg"
@@ -196,10 +192,10 @@
               <div class="team__wrap">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p class="team__desc">Product Designer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -213,7 +209,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -227,7 +223,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -241,7 +237,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -266,10 +262,10 @@
               <div class="team__wrap">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p class="team__desc">Frontend Developer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -283,7 +279,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -297,7 +293,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -311,7 +307,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -336,10 +332,10 @@
               <div class="team__wrap">
                 <h3 class="team__name">Николай Тарасов</h3>
                 <p class="team__desc">Marketing</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -353,7 +349,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -367,7 +363,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -381,7 +377,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -406,10 +402,10 @@
               <div class="team__wrap">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p class="team__desc">UI Designer</p>
-                <ul class="social list">
+                <ul class="social">
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -423,7 +419,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -437,7 +433,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -451,7 +447,7 @@
 
                   <li class="social__item">
                     <a
-                      class="social__link link"
+                      class="social__link"
                       href=""
                       target="_blank"
                       rel="noopener noreferrer"
@@ -474,10 +470,10 @@
     <section class="clients section">
       <div class="container">
         <h2 class="section__title">Постоянные клиенты</h2>
-        <ul class="clients__list list card-set">
+        <ul class="clients__list card-set">
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -490,7 +486,7 @@
           </li>
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -503,7 +499,7 @@
           </li>
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -516,7 +512,7 @@
           </li>
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -529,7 +525,7 @@
           </li>
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -542,7 +538,7 @@
           </li>
           <li class="clients__item card-item">
             <a
-              class="clients__link link"
+              class="clients__link"
               href=""
               target="_blank"
               rel="noopener noreferrer"
@@ -561,15 +557,15 @@
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__logo-wrapper">
-          <a href="" class="logo footer__logo link"
+          <a href="" class="logo footer__logo"
             ><span class="logo__excerpt logo__excerpt--blue">Web</span>Studio</a
           >
 
           <address class="adress">
-            <ul class="adress__list list">
+            <ul class="adress__list">
               <li class="adress__item">
                 <a
-                  class="adress__link adress__link--white adress__link--active link"
+                  class="adress__link adress__link--white adress__link--active"
                   href="https://goo.gl/maps/JBRobqoZpX21mrEm8"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -577,12 +573,12 @@
                 >
               </li>
               <li class="adress__item">
-                <a href="emailto:info@example.com" class="adress__link adress__link--active link"
+                <a href="emailto:info@example.com" class="adress__link adress__link--active"
                   >info@example.com</a
                 >
               </li>
               <li class="adress__item">
-                <a href="tel:+380991111111" class="adress__link adress__link--active link"
+                <a href="tel:+380991111111" class="adress__link adress__link--active"
                   >+38 099 111 11 11</a
                 >
               </li>
@@ -591,10 +587,10 @@
         </div>
         <div class="footer__social-wrapper">
           <h3 class="footer__title">Присоединяйтесь</h3>
-          <ul class="social list">
+          <ul class="social">
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -608,7 +604,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -622,7 +618,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -636,7 +632,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
