--- a/portfolio.html
+++ b/portfolio.html
@@ -19,35 +19,34 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header section-->
     <header class="header">
       <div class="container header__container">
-        <a href="" class="logo header__logo link"
+        <a href="" class="logo header__logo"
           ><span class="logo__excerpt logo__excerpt--blue">Web</span>Studio</a
         >
         <nav class="nav">
-          <ul class="nav__list list">
+          <ul class="nav__list">
             <li class="nav__item">
-              <a href="./index.html" class="nav__link nav__link--active link">Студия</a>
+              <a href="./index.html" class="nav__link nav__link--active">Студия</a>
             </li>
             <li class="nav__item">
-              <a href="./portfolio.html" class="nav__link nav__link--active nav__link--current link"
+              <a href="./portfolio.html" class="nav__link nav__link--active nav__link--current"
                 >Портфолио</a
               >
             </li>
             <li class="nav__item">
-              <a href="#contacts" class="nav__link nav__link--active link">Контакты</a>
+              <a href="#contacts" class="nav__link nav__link--active">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header__contact-list list">
+        <ul class="header__contact-list">
           <li class="header__contact-item">
             <a
               href="mailto:info@devstudio.com"
-              class="header__contact-link header__contact-link--active link"
+              class="header__contact-link header__contact-link--active"
             >
               <svg width="16" height="12" class="header__contact-icon">
                 <use href="./images/icons/icon.svg#envelope"></use>
@@ -56,10 +55,7 @@
             </a>
           </li>
           <li class="header__contact-item">
-            <a
-              href="tel:+380961111111"
-              class="header__contact-link header__contact-link--active link"
-            >
+            <a href="tel:+380961111111" class="header__contact-link header__contact-link--active">
               <svg width="10" height="16" class="header__contact-icon">
                 <use href="./images/icons/icon.svg#smartphone"></use>
               </svg>
@@ -75,7 +71,7 @@
       <section class="portfolio section">
         <div class="container">
           <h1 class="section__title section__title--visually-hidden">Портфолио</h1>
-          <ul class="filter portfolio__filter list">
+          <ul class="filter portfolio__filter">
             <li class="filter__item">
               <button type="button" class="filter__btn filter-btn--current">Все</button>
             </li>
@@ -93,9 +89,9 @@
             </li>
           </ul>
 
-          <ul class="portfolio__list list card-set">
+          <ul class="portfolio__list card-set">
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-1.jpg"
@@ -119,7 +115,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-2.jpg"
@@ -143,7 +139,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-3.jpg"
@@ -167,7 +163,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-4.jpg"
@@ -191,7 +187,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-5.jpg"
@@ -215,7 +211,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-6.jpg"
@@ -239,7 +235,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-7.jpg"
@@ -263,7 +259,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-8.jpg"
@@ -287,7 +283,7 @@
               </a>
             </li>
             <li class="portfolio__item card-item">
-              <a href="" class="portfolio__link link" target="_blank" rel="noopener noreferrer">
+              <a href="" class="portfolio__link" target="_blank" rel="noopener noreferrer">
                 <div class="portfolio__wrapper">
                   <img
                     src="./images/portfolio/img-9.jpg"
@@ -319,15 +315,15 @@
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__logo-wrapper">
-          <a href="" class="logo footer__logo link"
+          <a href="" class="logo footer__logo"
             ><span class="logo__excerpt logo__excerpt--blue">Web</span>Studio</a
           >
 
           <address class="adress">
-            <ul class="adress__list list">
+            <ul class="adress__list">
               <li class="adress__item">
                 <a
-                  class="adress__link adress__link--white adress__link--active link"
+                  class="adress__link adress__link--white adress__link--active"
                   href="https://goo.gl/maps/JBRobqoZpX21mrEm8"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -335,12 +331,12 @@
                 >
               </li>
               <li class="adress__item">
-                <a href="emailto:info@example.com" class="adress__link adress__link--active link"
+                <a href="emailto:info@example.com" class="adress__link adress__link--active"
                   >info@example.com</a
                 >
               </li>
               <li class="adress__item">
-                <a href="tel:+380991111111" class="adress__link adress__link--active link"
+                <a href="tel:+380991111111" class="adress__link adress__link--active"
                   >+38 099 111 11 11</a
                 >
               </li>
@@ -349,10 +345,10 @@
         </div>
         <div class="footer__social-wrapper">
           <h3 class="footer__title">Присоединяйтесь</h3>
-          <ul class="social list">
+          <ul class="social">
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -366,7 +362,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -380,7 +376,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
@@ -394,7 +390,7 @@
 
             <li class="social__item">
               <a
-                class="footer__social social__link link"
+                class="footer__social social__link"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer"
