--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </section>
 
       <!--Feature section-->
-      <section class="feature section">
+      <section class="feature">
         <div class="container">
           <h2 class="section__title visually-hidden">Особенности</h2>
           <ul class="feature__list card-set">
@@ -131,7 +131,7 @@
       </section>
 
       <!--Service section-->
-      <section class="service section">
+      <section class="service">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="service__list card-set">
@@ -177,7 +177,7 @@
       </section>
 
       <!--Team section-->
-      <section class="team section">
+      <section class="team">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="team__list card-set">
@@ -467,7 +467,7 @@
     </main>
 
     <!-- Clients section -->
-    <section class="clients section">
+    <section class="clients">
       <div class="container">
         <h2 class="section__title">Постоянные клиенты</h2>
         <ul class="clients__list card-set">
