--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
     <main>
       <section class="portfolio section">
         <div class="container">
-          <h1 class="section__title section__title--visually-hidden">Портфолио</h1>
+          <h1 class="section__title visually-hidden">Портфолио</h1>
           <ul class="filter portfolio__filter">
             <li class="filter__item">
               <button type="button" class="filter__btn filter-btn--current">Все</button>
